--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 <body class="dark">
 
 <header class="glow-box" role="banner" aria-label="UndyingSoul">
-  <img src="logo.png" alt="Логотип UndyingSoul" class="logo-img" />
+  <img src="IMG_20250712_132956_677.png" alt="Логотип UndyingSoul" class="logo-img" />
   <span data-lang="studio-name">UndyingSoul</span>
 </header>
 
