--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>UndyingSoul — Независимая студия</title>
 <style>
+
+
   /* Сброс */
   * {
     margin: 0; padding: 0; box-sizing: border-box;
@@ -405,6 +407,7 @@
     outline: none;
   }
 </style>
+
 </head>
 <body class="dark">
 
@@ -499,9 +502,10 @@
     <h2 data-lang="privacy-section2">2. Какие данные мы собираем?</h2>
     <ul>
       <li><strong data-lang="privacy-personal">Персональные данные</strong><span data-lang="privacy-personal-desc-ru">: имя, email, дата рождения (если требуется для возрастных ограничений).</span><span data-lang="privacy-personal-desc-en" hidden>: name, email, date of birth (if required for age restrictions).</span></li>
-      <li><strong data-lang="privacy-game">Игровые данные</strong><span data-lang="privacy-game-desc-ru">: прогресс, достижения, внутриигровые покупки.</span><span data-lang="privacy-game-desc-en" hidden>: progress, achievements, in-game purchases.</span></li>
-      <li><strong data-lang="privacy-tech">Технические данные</strong><span data-lang="privacy-tech-desc-ru">: IP-адрес, тип устройства, операционная система, данные аналитики.</span><span data-lang="privacy-tech-desc-en" hidden>: IP address, device type, operating system, analytics data.</span></li>
+      <li><strong data-lang="privacy-game">Игровые данные</strong><span data-lang="privacy-game-desc-ru">: прогресс, достижения, внутриигровые покупки.</span><span data-lang="privacy-game-desc-en" hidden>: progress, achievements, in-game purchases.</span></li>             
+      <li><strong data-lang="privacy-tech">Технические данные</strong><span data-lang="privacy-tech-desc-ru">: IP-адрес, тип устройства, операционная система, данные аналитики.</span><span data-lang="privacy-tech-desc-en" hidden>: IP address, device type, operating system, analytics data.</span></li>        
       <li><strong data-lang="privacy-pay">Данные платежей</strong><span data-lang="privacy-pay-desc-ru">: информация о транзакциях через платёжные системы.</span><span data-lang="privacy-pay-desc-en" hidden>: transaction information through payment systems.</span></li>
+    </ul>             
     </ul>
 
     <h2 data-lang="privacy-section3">3. Как мы используем ваши данные?</h2>
@@ -634,6 +638,11 @@
     },
 
     // Политика и копирайт
+    'privacy-personal': { ru: 'Персональные данные', en: 'Personal data' },
+    'privacy-game': { ru: 'Игровые данные', en: 'Game data' },
+    'privacy-tech': { ru: 'Технические данные', en: 'Technical data' },
+    'privacy-pay': { ru: 'Данные платежей', en: 'Payment data' },
+
     'privacy-title': { ru: 'Политика конфиденциальности', en: 'Privacy Policy' },
     'privacy-update': { ru: 'Последнее обновление: 01 июля 2025', en: 'Last updated: July 1, 2025' },
     'privacy-section1': { ru: '1. Введение', en: '1. Introduction' },
@@ -689,8 +698,8 @@
     <a href="#rights-page" class="btn-footer" data-lang="rights-text" aria-label="Права и копирайт">Все права защищены © 2025</a>
   </div>
   <div class="support-buttons">
-    <a href="https://boosty.to/spacegamessg" target="_blank" rel="noopener noreferrer" class="btn-footer" aria-label="Поддержать на Boosty" data-lang="boosty-link-text">Поддержать на Boosty 🚀</a>
-    <a href="https://t.me/SspaceGames" target="_blank" rel="noopener noreferrer" class="btn-footer" aria-label="Перейти в Telegram канал" data-lang="tg-link-text">Наш Telegram 📲</a>
+    <a href="https://boosty.to/undyingsoul" target="_blank" rel="noopener noreferrer" class="btn-footer" aria-label="Поддержать на Boosty" data-lang="boosty-link-text">Поддержать на Boosty 🚀</a>
+    <a href="https://t.me/UndyingSoulGames" target="_blank" rel="noopener noreferrer" class="btn-footer" aria-label="Перейти в Telegram канал" data-lang="tg-link-text">Наш Telegram 📲</a>
   </div>
 </footer>
 
